# rsstoat

./: .gitignore  CHANGELOG.md  PKGBUILD  README.md  chat.rsstoat.RsStoat.desktop  chat.rsstoat.RsStoat.metainfo.xml  default.nix  index.html  mise.toml  package.json  release-please-config.json  tsconfig.json
.github/workflows/: build.yml  release-please.yml
src/: renderer.ts
src-tauri/: Cargo.toml  bridge.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: badges.rs  config.rs  discord_rpc.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: mod.rs
