[package]
name = "rsstoat"
version = "1.3.0"
edition = "2021"
description = "rsStoat - Tauri v2 desktop client for Stoat chat"
authors = ["hisoka"]

[lib]
name = "rsstoat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.3", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "=2.3.5"
tauri-plugin-updater = "=2.10.1"
tauri-plugin-single-instance = "=2.4.2"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.52.3", features = ["sync"] }
auto-launch = "=0.5.0"
discord-rich-presence = "=1.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Com",
] }
